# nfvcl-k8s-admission-webhook

./: .gitignore  Dockerfile  pyproject.toml  webhook.py
.github/workflows/: docker-image.yml
k8s/: certificate.yaml  deployment.yaml  mutatingwebhookconfiguration.yaml
