[project]
name = "nfvcl-k8s-admission-webhook"
version = "0.1.0"
description = ""
authors = [
    {name = "Alderico Gallo",email = "alderico.gallo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "kubernetes (>=33.1.0,<34.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
